--- a/app/src/main/res/layout/activity_demo_drawable_animation.xml
+++ b/app/src/main/res/layout/activity_demo_drawable_animation.xml
@@ -16,7 +16,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/btnStart"
+        android:id="@+id/btnStartTranslate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="start"
