--- a/app/src/main/res/anim/anim_alpha.xml
+++ b/app/src/main/res/anim/anim_alpha.xml
@@ -1,7 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android">
-    <alpha
-        android:duration="5000"
-        android:fromAlpha="1"
-        android:toAlpha="0"/>
+    <!-- Rotate -->
+    <rotate
+        android:duration="10000"
+        android:fromDegrees="0"
+        android:interpolator="@android:anim/linear_interpolator"
+        android:pivotX="50%"
+        android:pivotY="50%"
+        android:repeatCount="4"
+        android:repeatMode="reverse"
+        android:toDegrees="360" />
+    <!--  Left to right -->
+    <translate
+        android:duration="10000"
+        android:fromXDelta="0%p"
+        android:fromYDelta="0%p"
+        android:interpolator="@android:anim/linear_interpolator"
+        android:toXDelta="0"
+        android:toYDelta="600" />
+    <!--  Up and down bob -->
 </set>
