--- a/app/src/main/res/anim/anim_translate.xml
+++ b/app/src/main/res/anim/anim_translate.xml
@@ -1,28 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android" >
+<!--    <translate-->
+<!--        android:duration="5000"-->
+<!--        android:fromXDelta="0"-->
+<!--        android:fromYDelta="0"-->
+<!--        android:toXDelta="0"-->
+<!--        android:toYDelta="600"-->
+<!--        android:pivotX="50%"-->
+<!--        android:pivotY="50%"-->
+<!--        android:interpolator="@android:anim/linear_interpolator"/>-->
+
     <translate
         android:duration="5000"
-        android:fromXDelta="0"
-        android:fromYDelta="0"
+        android:fromXDelta="0%p"
+        android:fromYDelta="0%p"
+        android:interpolator="@android:anim/linear_interpolator"
         android:toXDelta="0"
-        android:toYDelta="600"
-        android:pivotX="50%"
-        android:pivotY="50%"
-        android:repeatMode="restart"/>
-<!--    <set>-->
-<!--        <alpha-->
-<!--            android:duration="5000"-->
-<!--            android:fromAlpha="1"-->
-<!--            android:toAlpha="0"-->
-<!--            android:pivotX="50%"-->
-<!--            android:pivotY="50%"/>-->
-<!--        <rotate-->
-<!--            android:duration="5000"-->
-<!--            android:fromDegrees="0"-->
-<!--            android:pivotX="50%"-->
-<!--            android:pivotY="50%"-->
-<!--            android:toDegrees="360" />-->
-<!--    </set>-->
-
+        android:toYDelta="600" />
 
 </set>
