--- a/app/src/main/res/anim/anim_scale.xml
+++ b/app/src/main/res/anim/anim_scale.xml
@@ -1,13 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<set xmlns:android="http://schemas.android.com/apk/res/android">
+<set xmlns:android="http://schemas.android.com/apk/res/android"
+    android:interpolator="@android:anim/linear_interpolator" >
     <scale
-        android:duration="10000"
-        android:fromXScale="0"
-        android:fromYScale="0"
-        android:toXScale="1"
-        android:toYScale="1"
-        android:pivotY="50%"
+        android:duration="5000"
+        android:fromXScale="1.0"
+        android:fromYScale="1.0"
         android:pivotX="50%"
-        />
-
+        android:pivotY="50%"
+        android:toXScale="2"
+        android:toYScale="2" />
+    <translate
+        android:duration="4000"
+        android:fromXDelta="0%p"
+        android:fromYDelta="0%p"
+        android:pivotX="50%"
+        android:pivotY="50%"
+        android:startOffset="1000"
+        android:interpolator="@android:anim/bounce_interpolator"
+        android:toXDelta="0"
+        android:toYDelta="500" />
 </set>
