--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,17 +22,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Demo Tween Animation"
-        app:layout_constraintBottom_toTopOf="@+id/btnDemo"
+        app:layout_constraintBottom_toTopOf="@+id/btnMotionLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnDrawable" />
 
     <Button
-        android:id="@+id/btnDemo"
+        android:id="@+id/btnMotionLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Demo"
+        android:text="MotionLayout"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
