--- a/app/src/main/res/layout/activity_tween_animation.xml
+++ b/app/src/main/res/layout/activity_tween_animation.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TweenAnimation">
+    tools:context=".animation.TweenAnimation">
 
     <View
         android:id="@+id/view1"
