--- a/app/src/main/res/xml/activity_motion_scene.xml
+++ b/app/src/main/res/xml/activity_motion_scene.xml
@@ -5,37 +5,42 @@
     <Transition
         motion:constraintSetEnd="@+id/end"
         motion:constraintSetStart="@id/start"
-        motion:duration="3000">
+        motion:duration="3000"
+        motion:motionInterpolator="linear">
         <OnClick
+            motion:clickAction="toggle"
             motion:targetId="@id/view" />
-        <!--        <KeyFrameSet>-->
 
-        <!--            <KeyPosition-->
-        <!--                motion:framePosition="20"-->
-        <!--                motion:keyPositionType="parentRelative"-->
-        <!--                motion:motionTarget="@+id/view"-->
-        <!--                motion:percentY="0.3" />-->
-        <!--            <KeyPosition-->
-        <!--                motion:framePosition="40"-->
-        <!--                motion:keyPositionType="parentRelative"-->
-        <!--                motion:motionTarget="@+id/view"-->
-        <!--                motion:percentY="0.8" />-->
-        <!--            <KeyPosition-->
-        <!--                motion:framePosition="60"-->
-        <!--                motion:keyPositionType="parentRelative"-->
-        <!--                motion:motionTarget="@+id/view"-->
-        <!--                motion:percentY="0.3" />-->
-        <!--            <KeyPosition-->
-        <!--                motion:framePosition="80"-->
-        <!--                motion:keyPositionType="parentRelative"-->
-        <!--                motion:motionTarget="@+id/view"-->
-        <!--                motion:percentY="0.8" />-->
-
-        <!--        </KeyFrameSet>-->
-        <!--        <OnClick motion:targetId="@id/view"/>-->
+        <KeyFrameSet>
+            <KeyPosition
+                motion:framePosition="20"
+                motion:keyPositionType="parentRelative"
+                motion:motionTarget="@+id/view"
+                motion:percentY="0.3" />
+            <KeyPosition
+                motion:framePosition="40"
+                motion:keyPositionType="parentRelative"
+                motion:motionTarget="@+id/view"
+                motion:percentY="0.8" />
+            <KeyPosition
+                motion:framePosition="60"
+                motion:keyPositionType="parentRelative"
+                motion:motionTarget="@+id/view"
+                motion:percentY="0.3" />
+            <KeyPosition
+                motion:framePosition="80"
+                motion:keyPositionType="parentRelative"
+                motion:motionTarget="@+id/view"
+                motion:percentY="0.8" />
+        </KeyFrameSet>
     </Transition>
 
-    <ConstraintSet android:id="@+id/start"></ConstraintSet>
+    <ConstraintSet android:id="@+id/start">
+
+        <Constraint
+            motion:layout_constraintEnd_toEndOf="parent"
+            android:id="@+id/button" />
+    </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
         <Constraint
