--- a/app/src/main/res/xml/activity_example1_scene.xml
+++ b/app/src/main/res/xml/activity_example1_scene.xml
@@ -3,8 +3,8 @@
     xmlns:motion="http://schemas.android.com/apk/res-auto">
 
     <Transition
-        motion:constraintSetEnd="@+id/end"
-        motion:constraintSetStart="@id/start"
+        motion:constraintSetEnd="@+id/end1"
+        motion:constraintSetStart="@id/start1"
         motion:duration="1000">
 
         <OnSwipe
@@ -14,7 +14,7 @@
         <KeyFrameSet></KeyFrameSet>
     </Transition>
 
-    <ConstraintSet android:id="@+id/start">
+    <ConstraintSet android:id="@+id/start1">
         <Constraint
             android:id="@+id/textView"
             android:layout_width="wrap_content"
@@ -29,7 +29,7 @@
         </Constraint>
     </ConstraintSet>
 
-    <ConstraintSet android:id="@+id/end">
+    <ConstraintSet android:id="@+id/end1">
         <Constraint
             android:id="@+id/guideMid"
             android:layout_width="wrap_content"
