--- a/app/src/main/res/xml/activity_motion_scene.xml
+++ b/app/src/main/res/xml/activity_motion_scene.xml
@@ -3,8 +3,8 @@
     xmlns:motion="http://schemas.android.com/apk/res-auto">
 
     <Transition
-        motion:constraintSetEnd="@+id/end"
-        motion:constraintSetStart="@id/start"
+        motion:constraintSetEnd="@+id/end1"
+        motion:constraintSetStart="@id/start1"
         motion:duration="3000"
         motion:motionInterpolator="linear">
         <OnClick
@@ -35,14 +35,14 @@
         </KeyFrameSet>
     </Transition>
 
-    <ConstraintSet android:id="@+id/start">
+    <ConstraintSet android:id="@+id/start1">
 
         <Constraint
             motion:layout_constraintEnd_toEndOf="parent"
             android:id="@+id/button" />
     </ConstraintSet>
 
-    <ConstraintSet android:id="@+id/end">
+    <ConstraintSet android:id="@+id/end1">
         <Constraint
             android:id="@+id/view"
             android:layout_width="50dp"
