--- a/app/src/main/res/xml/activity_read_book_scene.xml
+++ b/app/src/main/res/xml/activity_read_book_scene.xml
@@ -5,18 +5,19 @@
     <Transition
         android:id="@+id/transitionFirst"
         motion:constraintSetEnd="@+id/mid"
-        motion:constraintSetStart="@+id/start" />
-    <ConstraintSet android:id="@+id/start">
+        motion:constraintSetStart="@+id/start1" />
+    <ConstraintSet android:id="@+id/start1">
         <Constraint
             android:layout_height="140dp"
             motion:layout_constraintBottom_toBottomOf="@+id/imageView3"
             android:layout_width="140dp"
             android:id="@+id/cardView"
             motion:layout_constraintTop_toTopOf="@+id/imageView3"
-            motion:layout_constraintEnd_toEndOf="@+id/imageView3" />
+            motion:layout_constraintEnd_toEndOf="@+id/imageView3"
+            motion:layout_constraintStart_toStartOf="@+id/imageView3" />
     </ConstraintSet>
     <ConstraintSet android:id="@+id/mid"></ConstraintSet>
-    <ConstraintSet android:id="@+id/end"></ConstraintSet>
+    <ConstraintSet android:id="@+id/end1"></ConstraintSet>
 
 
 </MotionScene>
